nvcs-client/src/document.css
.document-form {
    display: flex;
}

.document-content {
    display: flex;
    gap: 10px;
    border-bottom: 1px solid lightgray;
    padding: 5px 0;
}

.document-content .input-container {
    flex: 1;
}

.document-content .button-container {
    align-items: center;
}

.element-container {
    display: flex;
    gap: 15px;
    margin: 10px 0;
}

.element-container p {
    white-space: pre-wrap;
    margin: 0;
}

.element-child-container {
    width: 100%;
}

.element-child-container td {
    vertical-align: top;
    padding: 10px;
}

.element-child-container p {
    margin: 0;
}

.bottom-buttons {
    padding: 5px 0;
}

.skeletal-list-root {
    padding: 0;
    margin: 0;
}

.skeletal-container {
    display: flex;
    justify-content: space-between;
    gap: 10px;
}

.separator {
    flex: 1;
    border-bottom: 1px dotted black;
}

.document-toc ul {
    list-style: none;
    margin: 0;
}

.outlined {
    outline: 1px solid black;
}

